<resources>
    <string name="app_name">OrderNow Lite</string>
    <string name="facebook_app_id">602953306452334</string>
    <string name="parse_app_id">vMFTELLhOo9RDRql9HpV9lKRot5xQTCCD63wkYdQ</string>
    <string name="parse_client_key">mdz7n8XUjy3u0MSQRnuwmogqXZrw3qJnRwmRxx0g</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">Scan the QR code on the table.</string>
    <string name="scan_qr_codes">Scan QR Code</string>
    <string name="open_res_menu">Open Restaurant Menu</string>
    <string name="open_sample_res_menu">Browse Restaurants For Delivery</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="send_to_kitchen">"Send To Kitchen"</string>
    <string name="all">"All"</string>
    <string name="veg">"Veg"</string>
    <string name="nonveg">"NonVeg"</string>
    <string name="cancel_order_btn">"Cancel Order"</string>
    <string name="confirm_order_btn">"Confirm Order"</string>
    <string name="add_more_items_btn">"Add More Items"</string>
    <string name="add_to_cart">"Add To Cart"</string>
    <string name="total">"Total"</string>
    <string name="ok">"OK"</string>
    <string name="cancel">"Cancel"</string>
    <string name="retry">"Retry"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="myorder">"My Order"</string>
    <string name="addnotes">"Add Notes"</string>
    <string name="save">"Save"</string>
    <string name="confirmed_order">"Confirmed Order"</string>
    <string name="search_title">"Search Dishes"</string>
    <string name="search_hint">"Search Dishes Here"</string>
    <string name="no_dishes">"Sorry No Dishes Found! \nPlease Search Again Or Slide For the Category Drawer"</string>
    <string name="confirm_order_comment_hint_text">"Enter additional comments for this order!!"</string>
    <string name="rest_feedback_comment_hint_text">"Your feedback is valuable to us. Enter additional comments here!"</string>
    <string name="filter_menu">"Filter Menu"</string>
    <string name="modify">"Modify"</string>
    <string name="reordernow">"Reorder Now"</string>
    <string name="requestbill">"Request Bill"</string>
    <string name="callWaiter">"Call Waiter"</string>
    <string name="rateUs">"Rate Us"</string>
    <string name="submit">"Submit"</string>
    <string name="signOut">"Sign Out"</string>
    <string name="send_App_Feedback">"Send App Feedback"</string>
    <string name="splash_message">Food Kart</string>
    <string-array name="ingredients_title">
        <item>Choice of Vegetables</item>
        <item>Choice of Proteins</item>
        <item>Condiments</item>
        <item>Starch</item>
    </string-array>
    <string-array name="chef0">
        <item>Fresh Malineinse</item>
        <item>Baby Corn</item>
        <item>Chicken</item>
        <item>Lamb</item>
        <item>Red Chilli</item>
        <item>Sliced Onion</item>
        <item>Noodles</item>
    </string-array>
    <string-array name="ing0">
        <item>Fresh Malineinse</item>
        <item>Palk Choi</item>
        <item>Baby Corn</item>
        <item>Corn Kernel</item>
        <item>Green Beans</item>
    </string-array>
    <string-array name="ing1">
        <item>Egg</item>
        <item>Chicken</item>
        <item>Fish</item>
        <item>Pork</item>
        <item>Lamb</item>
    </string-array>
    <string-array name="ing2">
        <item>Ginger</item>
        <item>Garlic</item>
        <item>Red Chilli</item>
        <item>Sliced Onion</item>
    </string-array>
    <string-array name="ing3">
        <item>Rice</item>
        <item>Noodles</item>
    </string-array>
    <string-array name="nav_drawer_items">
        <item>Soups</item>
        <item>Starters</item>
        <item>Salads</item>
        <item>Sizzlers</item>
        <item>Favourites</item>
        <item>Stir Fry Bowl</item>
    </string-array>
    <string-array name="soups">
        <item>Cream of Veg</item>
        <item>Roasted Bell Pepper Soup</item>
        <item>Baked French Onion</item>
        <item>Consomme Soup</item>
        <item>Spicy Sea Food Soup</item>
    </string-array>
    <string-array name="soups_ids">
        <item>d0</item>
        <item>d1</item>
        <item>d2</item>
        <item>d3</item>
        <item>d4</item>
    </string-array>
    <string-array name="soups_icons">
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
    </string-array>
    <string-array name="starters">
        <item>Nachos with Cheese Sauce</item>
        <item>Italian Cheese Fingers</item>
        <item>BBQ Chicken Wings</item>
        <item>Roasted Lamb</item>
        <item>Lamb Chops</item>
    </string-array>
    <string-array name="starters_ids">
        <item>d5</item>
        <item>d6</item>
        <item>d7</item>
        <item>d8</item>
        <item>d9</item>
    </string-array>
    <string-array name="starters_icons">
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
    </string-array>
    <string-array name="salads">
        <item>Mexican Salad</item>
        <item>Tossed Salad</item>
        <item>Greek Salad</item>
        <item>Cesar Salad</item>
        <item>Chicken Hawaian Salad</item>
    </string-array>
    <string-array name="salads_ids">
        <item>d10</item>
        <item>d11</item>
        <item>d12</item>
        <item>d14</item>
        <item>d15</item>
    </string-array>
    <string-array name="salads_icons">
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
    </string-array>
    <string-array name="sizzlers">
        <item>Corn N Potato Sizzler</item>
        <item>Cottage Cheese Sizzler</item>
        <item>Chicken Sizzler</item>
        <item>Lamb Sizzler</item>
        <item>Grilled Fish Sizzler</item>
        <item>Prawns Sizzler</item>
    </string-array>
    <string-array name="sizzlers_ids">
        <item>d16</item>
        <item>d17</item>
        <item>d18</item>
        <item>d19</item>
        <item>d20</item>
        <item>d21</item>
    </string-array>
    <string-array name="sizzlers_icons">
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/cake.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/sandwich.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/sandwich.png</item>
    </string-array>
    <string-array name="favourites">
        <item>Chicken Stroganoff</item>
        <item>Chicken Alakin</item>
        <item>Lamb Marango</item>
        <item>Lamb Stroganoff</item>
    </string-array>
    <string-array name="favourites_ids">
        <item>d22</item>
        <item>d23</item>
        <item>d24</item>
        <item>d25</item>
    </string-array>
    <string-array name="favourites_icons">
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
    </string-array>
    <string-array name="frybowl">
        <item>Make Your Bowl</item>
        <item>Chef Recommended</item>
    </string-array>
    <string-array name="frybowl_ids">
        <item>d26</item>
        <item>d27</item>
        <item>d28</item>
    </string-array>
    <string-array name="frybowl_icons">
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
        <item>http://files.softicons.com/download/food-drinks-icons/free-food-icons-by-daily-overview/png/48x48/chicken.png</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="tabActionBarMyOrder">My order</string>
    <string name="my_order_des">My Order</string>
    <string name="confirmed_order_des">Confirmed Order</string>
    <string name="history_des">History</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="dine_in">Dine In</string>
    <string name="delivery_button">Delivery Button</string>
</resources>