<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_cart"
        android:actionLayout="@layout/food_cart"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/myorder"/>
    
    <item
        android:id="@+id/confirmed_order"
        android:actionLayout="@layout/confirmed_order"
        android:orderInCategory="150"
        android:showAsAction="ifRoom"
        android:title="@string/confirmed_order"/>

    <item android:id="@+id/search"
          android:title="@string/search_title"
          android:orderInCategory="90"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />

</menu>

