<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/restName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Restaurant Name" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/restRateText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rateUs"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RatingBar
            android:id="@+id/restRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:layout_marginLeft="5dp"
            android:rating="0.0"
            android:stepSize="0.5" />
    </LinearLayout>
    
    
    <EditText
        android:id="@+id/restFeedbackEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rest_feedback_comment_hint_text" >
        <requestFocus />
    </EditText>
    
    
    <Button
        android:id="@+id/restFeedbackSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/submit" />
    

</LinearLayout>