<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <!-- Framelayout to display Fragments -->

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayoutForDivider"
            android:layout_centerHorizontal="true" >
    

        </FrameLayout>
		
		<LinearLayout
            android:id="@+id/linearLayoutForDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_above="@+id/bottombuttonlayout"
            android:background="@color/white"
            android:weightSum="1" >
        	<View
                android:id="@+id/margin2"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="?android:attr/dividerHorizontal"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:showDividers="middle" />
        
        </LinearLayout>
      
            
        <LinearLayout
            android:id="@+id/bottombuttonlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@color/white"
            android:weightSum="1" >
   

            <ImageButton
                android:id="@+id/myorderbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:background="@color/white"
                android:src="@drawable/ic_cart_icon" 
                android:contentDescription="@string/my_order_des"/>

            <View
                android:id="@+id/margin"
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dip"
                android:layout_marginTop="4dip"
                android:background="?android:attr/dividerVertical" />

            <ImageButton
                android:id="@+id/conirmedorderbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:background="@color/white"
                android:src="@drawable/confirmed_order_icon" 
                android:contentDescription="@string/confirmed_order_des"/>

            <View
                android:id="@+id/margin1"
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dip"
                android:layout_marginTop="4dip"
                android:background="?android:attr/dividerVertical" />

            <ImageButton
                android:id="@+id/historybutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".34"
                android:background="@color/white"
                android:src="@drawable/history_icon"
                android:contentDescription="@string/history_des" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Listview to display slider menu -->

    <ListView
        android:id="@+id/list_slidermenu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottombuttonlayout"
        android:layout_gravity="start"
        android:background="@color/list_background"
        android:choiceMode="singleChoice"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp" />

</android.support.v4.widget.DrawerLayout>